@@ -55,6 +55,8 @@ This file lists the incompatible changes between Version 2.x and older versions
   - ellsea is replaced by Fp_ellcard_SEA
   - rename PI -> M_PI
   - renamed row_zm -> zm_row, row_Flm -> Flm_row
+  - nucomp now takes L = floor(|D|^(1/4)) as a 3rd argument. Former
+    nucomp(x,n) is nucomp(x,n,NULL).
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.6 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - eval() no longer evaluates its arguments in "permissive" mode: eval("1a")
