@@ -7,12 +7,12 @@ Help: qfbnucomp(x,y,L): composite of primitive positive definite quadratic
 Doc: \idx{composition} of the primitive positive
  definite binary quadratic forms $x$ and $y$ (type \typ{QFI}) using the NUCOMP
  and NUDUPL algorithms of \idx{Shanks}, \`a la Atkin. $L$ is any positive
- constant, but for optimal speed, one should take $L=|D|^{1/4}$, where $D$ is
- the common discriminant of $x$ and $y$. When $x$ and $y$ do not have the same
- discriminant, the result is undefined.
+ constant, but for optimal speed, one should take $L=|D|^{1/4}$, i.e.
+ \kbd{sqrtnint(abs(D),4)}, where $D$ is the common discriminant of $x$ and
+ $y$. When $x$ and $y$ do not have the same discriminant, the result is
+ undefined.
 
- The current implementation is straightforward and in general \emph{slower}
- than the generic routine (since the latter takes advantage of asymptotically
- fast operations and careful optimizations).
+ The current implementation is slower than the generic routine for small $D$,
+ and becomes faster when $D$ has about $45$ bits.
 
 Variant: Also available is \fun{GEN}{nudupl}{GEN x, GEN L} when $x=y$.
