@@ -1431,9 +1431,9 @@ void    check_quaddisc_imag(GEN x, long *r, const char *f);
 void    check_quaddisc_real(GEN x, long *r, const char *f);
 long    cornacchia(GEN d, GEN p, GEN *px, GEN *py);
 long    cornacchia2(GEN d, GEN p, GEN *px, GEN *py);
-GEN     nucomp(GEN x, GEN y, GEN l);
-GEN     nudupl(GEN x, GEN l);
-GEN     nupow(GEN x, GEN n);
+GEN     nucomp(GEN x, GEN y, GEN L);
+GEN     nudupl(GEN x, GEN L);
+GEN     nupow(GEN x, GEN n, GEN L);
 GEN     primeform(GEN x, GEN p, long prec);
 GEN     primeform_u(GEN x, ulong p);
 GEN     qfbcompraw(GEN x, GEN y);
