@@ -10,6 +10,7 @@ Qfb(8, 13, 6)
 Qfb(1, 1, 6)
 Qfb(1009, 60, 99108027750247771)
 Qfb(1, 0, 100000000000000000039)
+Qfb(1, 0, 100000000000000000039)
 Qfb(1, 1, 6)
 [Qfb(1, 1, 6), [22479, 76177; -39508, -133885]]
 [Qfb(4, 3, -3, 0.E-38), [127327, -416128; -148995, 486943]]
@@ -22,4 +23,4 @@ Qfb(1, 1, 6)
   *** qfbredsl2: incorrect type in qfbredsl2 (t_VEC).
 Qfb(18446744073709551629, 4741036151112220792, 304625896260305173)
 Qfb(18446744073709551629, 7562574061564804959, 775103267656920011, 0.E-38)
-Total time spent: 4
+Total time spent: 0
