@@ -14,6 +14,8 @@ qfbpowraw(q,3)
 qfbred(q3,1)
 q=Qfb(1009, 60, 99108027750247771)
 qfbnupow(q, 8839368315)
+L = sqrtnint(abs(poldisc(q)), 4);
+qfbnupow(q, 8839368315,L)
 q=Qfb(22000957029,25035917443,7122385192);
 qfbred(q)
 qfbredsl2(q)
